// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should handle errors 1`] = `
<React.Fragment>
  <div />
  <Styled(PlaygroundError)
    message="Invariant Violation: Target container is not a DOM element."
  />
</React.Fragment>
`;

exports[`should render component renderer 1`] = `
<React.Fragment>
  <div />
</React.Fragment>
`;

exports[`should wrap code in Fragment when it starts with < 1`] = `

<div>
  <span>
  </span>
  <span>
  </span>
</div>

`;
